src/objects/BMCServiceDesk__SYSQVFieldInfo__c.object
<CustomObject>
    <description>This object allows you to store data for the fields in QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVFieldInfo</relationshipLabel>
        <relationshipName>SYSQVFieldInfo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Object_name__c</fullName>
        <description>Stores the object name of fields that are used in a QuickView.</description>
        <label>Object name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__columnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__displayLabel__c</fullName>
        <label>Display Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__displayPosition__c</fullName>
        <label>Display Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isDisplayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isWrappable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wrappable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__sortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__sortType__c</fullName>
        <label>Sort Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quickview Fields Info</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SYSQVFieldInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSQVFieldInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>